# M5Paper-ePub-reader

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/bsp/battery/: CMakeLists.txt  battery.c  battery.h
components/bsp/eink/: CMakeLists.txt  IT8951.h  eink.c  eink.h
components/bsp/i2c/: CMakeLists.txt  i2c.c  i2c.h
components/bsp/real_time_clock/: BM8563.h  CMakeLists.txt  real_time_clock.c  real_time_clock.h
components/bsp/rtc/: CMakeLists.txt
components/bsp/spi/: CMakeLists.txt  spi.c  spi.h
components/bsp/touch/: CMakeLists.txt  GT911.h  touch.c  touch.h
components/bsp/touch_panel/: CMakeLists.txt  GT911.h  touch_panel.c  touch_panel.h
components/drivers/sleep/: CMakeLists.txt  sleep.c  sleep.h
components/eink_worker/: CMakeLists.txt  eink_worker.c  eink_worker.h
components/epub/: CMakeLists.txt  Epub.cpp  Epub.hpp  EpubConstants.hpp  EpubSection.cpp  EpubSection.hpp  HtmlEntities.cpp  HtmlEntities.hpp  TextBlock.hpp  UniqueMptr.hpp  epub.c  epub.h  epub_section.c  epub_section.h  epub_text_block.c  epub_text_block.h  epub_toc_entry.c  epub_toc_entry.h  epub_utils.c  epub_utils.h  miniz_test.c  miniz_test.h
components/fatfs_sd/: CMakeLists.txt  fatfs_sd.c  fatfs_sd.h
components/gui/: CMakeLists.txt  Colors.hpp  Dimensions.hpp  Gui.cpp  Gui.hpp  gui.c  gui.h  gui_colors.h  gui_dimensions.h  main_window.c  main_window.h
components/gui/files_list/: FilesList.cpp  FilesList.hpp  FilesListView.cpp  FilesListView.hpp  gui_files_list.c  gui_files_list.h
components/gui/files_list/style/: Style.hpp
components/gui/fonts/: Fonts.h  gui_fonts.h  gui_montserrat_medium_20.c  gui_montserrat_medium_24.c  gui_montserrat_medium_28.c  gui_montserrat_medium_30.c  gui_montserrat_medium_36.c  gui_montserrat_medium_44.c
components/gui/page/: PageView.cpp  PageView.hpp  gui_page.c  gui_page.h
components/gui/page/style/: Style.hpp
components/gui/popups/: ErrorPopup.cpp  ErrorPopup.hpp  PopupUnsupported.cpp  PopupUnsupported.hpp  gui_set_time_popup.c  gui_set_time_popup.h  gui_unsupported_popup.c  gui_unsupported_popup.h
components/gui/popups/style/: Style.hpp
components/gui/status_bar/: StatusBar.cpp  StatusBar.hpp  StatusBarCWrapper.cpp  StatusBarCWrapper.h  gui_status_bar.c  gui_status_bar.h
components/gui/status_bar/style/: Style.hpp
components/gui/toc_list/: TocListView.cpp  TocListView.hpp  gui_toc_list.c  gui_toc_list.h
components/gui/toc_list/style/: Style.hpp
components/lvgl_task/: CMakeLists.txt  lvgl_task.c  lvgl_task.h
components/sleep/: sleep.c  sleep.h
components/utils/: CMakeLists.txt  utils.h
components/utils/cvec/: CMakeLists.txt  cvec.c  (+1 more)
main/: CMakeLists.txt  main.c  main.cpp
(+13 files in other folders)
